--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,12 @@
 {
   "name": "backend",
-  "module": "server.ts",
+  "module": "server.js",
   "type": "module",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest",
-    "ts-node-dev": "^2.0.0"
-  },
   "scripts": {
-    "dev": "nodemon server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@types/express": "^5.0.3",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -33,7 +23,6 @@
     "python-shell": "^5.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^4.1.5"
