--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "SafarSuraksha",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo3.png",
     "scheme": "SafarSuraksha",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,7 +14,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/logo3.png",
         "backgroundColor": "#FFFFFF"
       },
       "edgeToEdgeEnabled": true,
@@ -24,14 +24,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/logo3.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/logo3.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#FFFFFF"
@@ -45,10 +45,10 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "bee2b2ee-af53-47f5-a45a-b53fa2a63479"
+        "projectId": "ef948f0c-8c8f-44bd-aee6-808429a7f216"
       }
     },
-    "owner": "admintechproduct",
+    "owner": "rocky_745",
     "runtimeVersion": {
       "policy": "appVersion"
     },
